# ITMO-My-Projects

./: .gitignore  README.md  index.html
1-История/Конспекты и эссе/: Эссе 2 Васильченко Роман.docx
1-Философия/: Apr-19-22 Рационализм; Безумие copy.md  Практика Mar-01-22 Девид Юн.md
2-Web/lab1/: README.md  index.html
History - История (Реформы и реформаторы в истории России)/: Васильченко Роман P3117 («Шоковая терапия» в России_ успех или провал проводимой политики).docx  Васильченко Роман P3117 (Гендерное равенство в СССР_ миф или реальность).docx  СССР В период -застоя-.md
Homework - Домашняя работа-/Информатика Аннотации/: Аннотация №4.doc  (+2 more)
Informatics Annotation -Информатика Аннотации/: Аннотация №5.doc  Аннотация №6.doc
Year-2/EmbeddedSystems, Встроенные системы/assignment-1-pe-file-reader/tester/: CMakeLists.txt  tester.cmake
Year-2/EmbeddedSystems, Встроенные системы/assignment-1-pe-file-reader/tester/include/: file_cmp.h  io.h
Year-2/EmbeddedSystems, Встроенные системы/assignment-1-pe-file-reader/tester/src/: io.c
Year-2/EmbeddedSystems, Встроенные системы/assignment-1-pe-file-reader/tester/tests/1/: section
Year-2/EmbeddedSystems/assignment-1-pe-file-reader/solution/: CMakeLists.txt
Year-2/EmbeddedSystems/assignment-1-pe-file-reader/solution/src/: file_io.c  main.c  pe_util.c  util.c
Year-2/EmbeddedSystems/assignment-1-pe-file-reader/solution/src/include/: file_io.h  pe_file.h  pe_util.h  util.h
Информатика-Аннотации/: Аннотация №1.docx
Коммуникации&Командообразование/: Тест Белбина.docx
Философия/: Feb-10-22 Зарождение философии.md
(+1322 files in other folders)
